--- a/ckanext/dia_theme/fanstatic/dia_custom.css
+++ b/ckanext/dia_theme/fanstatic/dia_custom.css
@@ -7320,7 +7320,7 @@ textarea {
 .search-form {
   margin-bottom: 20px;
   padding-bottom: 25px;
-  border-bottom: 1px dotted #ddd;
+  border-bottom: 0px;
 }
 .search-form .search-input {
   position: relative;
@@ -11383,4 +11383,56 @@ iframe {
 }
 .ie7 .media-overlay .media-heading {
   background-color: #000;
+}
+
+h3.heading {
+  margin-top: 0px;
+}
+
+.site-layout {
+  display: block;
+  padding: 35px 0;
+}
+
+@media screen and (min-width: 952px)
+.site-layout {
+    padding: 35px 0;
+}
+
+.wrapper:before {
+  border-right: 0px;
+}
+
+.home-pin {
+  margin-top: 10px;
+}
+
+.control-medium input, .control-medium select, .control-medium textarea {
+    width: 100%;
+    display: block;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    width: 100%;
+    margin: 0 0 4px;
+    padding: 0.9em;
+    border: 2px solid #C3CED8;
+    border-radius: 1.5em;
+    background-color: #fff;
+    -webkit-transition: border-color 0.25s ease-in-out, -webkit-box-shadow 0.3s ease, -webkit-box-shadow 0.5s;
+    transition: border-color 0.25s ease-in-out, -webkit-box-shadow 0.3s ease, -webkit-box-shadow 0.5s;
+    -o-transition: box-shadow 0.3s ease, box-shadow 0.5s, border-color 0.25s ease-in-out;
+    transition: box-shadow 0.3s ease, box-shadow 0.5s, border-color 0.25s ease-in-out;
+    transition: box-shadow 0.3s ease, box-shadow 0.5s, border-color 0.25s ease-in-out, -webkit-box-shadow 0.3s ease, -webkit-box-shadow 0.5s;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    font-family: inherit;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.42857;
+    color: #182B46;
+    padding: 0 0.9em;
+    height: 2.5em;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
 }
