--- a/ckanext/dia_theme/templates/home/snippets/search.html
+++ b/ckanext/dia_theme/templates/home/snippets/search.html
@@ -1,21 +1,15 @@
-{% set tags = h.get_facet_items_dict('tags', limit=3) %}
-{% set placeholder = _('E.g. environment') %}
+{% set placeholder = _('Flood risk factors, meterological surveys, etc.') %}
 
-<div class="module module-search module-narrow module-shallow box">
-  <form class="module-content search-form" method="get" action="{% url_for controller='package', action='search' %}">
-    <h3 class="heading"><label for="searchbox">{{ _("Search data") }}</label></h3>
-    <div class="search-input control-group search-giant">
-      <input id="searchbox" type="text" class="search" name="q" value="" autocomplete="off" placeholder="{% block search_placeholder %}{{ placeholder }}{% endblock %}" />
-      <button type="submit" role="presentation" tabindex="-1">
-        <i class="icon-search"></i>
-        <span>{{ _('Search') }}</span>
+<div class="margin-b-md">
+  <form class="module-content search-form" method="get" action="{% url_for 'dataset' %}">
+    <h3 class="heading"><label for="searchbox">{{ _("Search for") }}</label></h3>
+    <div class="search-input form-group search-giant">
+      <input aria-label="{% block header_site_search_label %}{{ _('Search datasets') }}{% endblock %}" id="field-main-search" type="text" class="form-control" name="q" value="" autocomplete="off" placeholder="{% block search_placeholder %}{{ placeholder }}{% endblock %}" />
+      <button type="submit">
+        <i class="fa fa-search"></i>
+        <span class="sr-only">{{ _('Search') }}</span>
       </button>
     </div>
   </form>
-  <div class="tags">
-    <h3>{{ _('Popular tags') }}</h3>
-    {% for tag in tags %}
-      <a class="tag" href="{% url_for controller='package', action='search', tags=tag.name %}">{{ h.truncate(tag.display_name, 22) }}</a>
-    {% endfor %}
-  </div>
 </div>
+
