--- a/ckanext/dia_theme/templates/home/snippets/stats.html
+++ b/ckanext/dia_theme/templates/home/snippets/stats.html
@@ -1,31 +1,20 @@
 {% set stats = h.get_site_statistics() %}
 
-<div class="box stats">
-  <div class="inner">
-    <h3>{{ _('{0} statistics').format(g.site_title) }}</h3>
-    <ul>
-      {% block stats_group %}
-      <li>
-        <a href="{{ h.url_for(controller='package', action='search') }}">
-          <b>{{ h.SI_number_span(stats.dataset_count) }}</b>
-          {{ _('dataset') if stats.dataset_count == 1 else _('datasets') }}
-        </a>
-      </li>
-      <li>
-        <a href="{{ h.url_for(controller='organization', action='index') }}">
-          <b>{{ h.SI_number_span(stats.organization_count) }}</b>
-          {{ _('organization') if stats.organization_count == 1 else _('organizations') }}
-        </a>
-      </li>
+<div class="metrics-bubbles margin-b-lg">
 
+            <a href="{{ h.url_for(controller='package', action='search') }}" class="metrics-bubble ga-bubble-datasets">
+              <span class="metrics-bubble__stat">{{ h.SI_number_span(stats.dataset_count) }}</span>
+              <span class="metrics-bubble__label">{{ _('dataset') if stats.dataset_count == 1 else _('datasets') }}</span>
+            </a>
 
-      <li>
-        <a href="{{ h.url_for(controller='group', action='index') }}">
-          <b>{{ h.SI_number_span(stats.group_count) }}</b>
-          {{ _('group') if stats.group_count == 1 else _('groups') }}
-        </a>
-      </li>
-      {% endblock %}
-    </ul>
-  </div>
-</div>
+            <a href="{{ h.url_for(controller='organization', action='index') }}" class="metrics-bubble ga-bubble-organisations">
+              <span class="metrics-bubble__stat">{{ h.SI_number_span(stats.organization_count) }}</span>
+              <span class="metrics-bubble__label">{{ _('organization') if stats.group_count == 1 else _('organizations') }}</span>
+            </a>
+
+            <a href="{{ h.url_for(controller='group', action='index') }}" class="metrics-bubble ga-bubble-groups">
+              <span class="metrics-bubble__stat">{{ h.SI_number_span(stats.group_count) }}</span>
+              <span class="metrics-bubble__label">{{ _('group') if stats.group_count == 1 else _('groups') }}</span>
+            </a>
+
+        </div>
