--- a/ckanext/dia_theme/templates/package/search.html
+++ b/ckanext/dia_theme/templates/package/search.html
@@ -67,15 +67,10 @@
 {% endblock %}
 
 
-{# Add a link to add datasets below search results #}
 {% block package_search_results_api_inner %}
   <div class="search-result-api-message message">
     <span class="fa fa-lightbulb-o"></span>
     {{ super() }}
-  </div>
-  <div class="search-result-bottom-link">
-    Can't find it?
-    <a href="{{ h.parent_site_url() }}/request-data/" title="Search for requested datasets or create a new request" class="button">Request a dataset</a>
   </div>
 {% endblock %}
 
@@ -84,7 +79,7 @@
 
 <a href="#filters" class="visuallyhidden focusable skip-to-content">Skip map</a>
 
-{% snippet "spatial/snippets/spatial_query.html", default_extent="[[-35, 167], [-47, 180]]" %}
+{% snippet "spatial/snippets/spatial_query.html" %}
 
 
 <div id="filters" class="filters">
