--- a/ckanext/dia_theme/templates/snippets/user_reg_disabled.html
+++ b/ckanext/dia_theme/templates/snippets/user_reg_disabled.html
@@ -1,3 +1,3 @@
 <h1>Register for account</h1>
-<p>Please contact the data.govt.nz team to request access to publish datasets here - <a href="mailto:info@data.govt.nz" title="email the open data team">info@data.govt.nz</a></p>
+<p>Please contact the Operandum team to request access to publish datasets here - <a href="https://www.operandum-project.eu/contact/" title="Contact the Operandum open data team">https://www.operandum-project.eu/contact/</a></p>
 <p>A member of the team will reply and go through some simple steps to getting your data published. Thank you.</p>
