--- a/ckanext/dia_theme/templates/organization/index.html
+++ b/ckanext/dia_theme/templates/organization/index.html
@@ -3,7 +3,7 @@
 {% block page_primary_action %}
   {% if h.check_access('organization_create') %}
     <div class="page_primary_action">
-      {% link_for _('Add Organization'), controller='package', action='new', class_='button', icon='plus-square' %}
+      {% link_for _('Add Organization'), controller='organization', action='new', class_='button', icon='plus-square' %}
     </div>
   {% endif %}
 {% endblock %}
