Link to TOC pages

--- a/ckanext/dia_theme/templates/footer.html
+++ b/ckanext/dia_theme/templates/footer.html
@@ -61,19 +61,19 @@
 				<ul class="menu vertical site-footer__menu">
 
 						<li>
-							<a href={{ h.url_for("home.about") }}/ class="link">
+							<a href=/pages/terms-of-use/ class="link">
 								Terms of use
 							</a>
 						</li>
 
 						<li>
-							<a href={{ h.url_for("home.about") }}/ class="link">
+							<a href=/pages/privacy-policy/ class="link">
 								Privacy policy
 							</a>
 						</li>
 
 						<li>
-							<a href={{ h.url_for("home.about") }}/ class="link">
+							<a href=/pages/copyright/ class="link">
 								Copyright
 							</a>
 						</li>
