Fix link generation

--- a/ckanext/dia_theme/templates/footer.html
+++ b/ckanext/dia_theme/templates/footer.html
@@ -16,19 +16,19 @@
 						</li>
 
 						<li>
-							<a href="{{ h.url_for("dataset") }}/" class="link">
+							<a href="/{{ h.url_for("dataset") }}/" class="link">
 								Datasets
 							</a>
 						</li>
 
 						<li>
-							<a href="{{ h.url_for("organization") }}/" class="link">
+							<a href="/{{ h.url_for("organization") }}/" class="link">
 								Organizations
 							</a>
 						</li>
 
 						<li>
-							<a href="{{ h.url_for("group") }}/" class="link">
+							<a href="/{{ h.url_for("group") }}/" class="link">
 								Groups
 							</a>
 						</li>
