Fix ckanext-pages bug

--- a/ckanext/dia_theme/templates/footer.html
+++ b/ckanext/dia_theme/templates/footer.html
@@ -10,31 +10,31 @@
 				<ul class="menu vertical md-2-column site-footer__menu">
 
 						<li>
-							<a href="{{ h.url_for("home.index") }}/" class="link">
+							<a href="{{ h.url_for("home.index") }}" class="link">
 								Home
 							</a>
 						</li>
 
 						<li>
-							<a href="/{{ h.url_for("dataset") }}/" class="link">
+							<a href="/{{ h.url_for("dataset") }}" class="link">
 								Datasets
 							</a>
 						</li>
 
 						<li>
-							<a href="/{{ h.url_for("organization") }}/" class="link">
+							<a href="/{{ h.url_for("organization") }}" class="link">
 								Organizations
 							</a>
 						</li>
 
 						<li>
-							<a href="/{{ h.url_for("group") }}/" class="link">
+							<a href="/{{ h.url_for("group") }}" class="link">
 								Groups
 							</a>
 						</li>
 
 						<li>
-							<a href="{{ h.url_for("home.about") }}/" class="link">
+							<a href="{{ h.url_for("home.about") }}" class="link">
 								About
 							</a>
 
@@ -61,19 +61,19 @@
 				<ul class="menu vertical site-footer__menu">
 
 						<li>
-							<a href=/pages/terms-of-use/ class="link">
+							<a href=/pages/terms-of-use class="link">
 								Terms of use
 							</a>
 						</li>
 
 						<li>
-							<a href=/pages/privacy-policy/ class="link">
+							<a href=/pages/privacy-policy class="link">
 								Privacy policy
 							</a>
 						</li>
 
 						<li>
-							<a href=/pages/copyright/ class="link">
+							<a href=/pages/copyright class="link">
 								Copyright
 							</a>
 						</li>
