--- a/ckanext/dia_theme/templates/snippets/package_item.html
+++ b/ckanext/dia_theme/templates/snippets/package_item.html
@@ -1,9 +1,28 @@
 {% ckan_extends %}a
 
-{% block heading %}
-  {{ super() }}
-  <span class="dataset-subheading">{{package.organization.title}}</span>
-{% endblock %}
+        {% block heading %}
+          <h3 class="dataset-heading">
+                {% block inpsire_icon %}
+      {% if package.inspire_resource_type in ["dataset", "series", "service"] %}
+        <span><img src="/dia/images/inspire_logo.png" height="25" width="25">
+        </span>
+      {% endif %}
+    {% endblock %}
+            {% block heading_private %}
+              {% if package.private %}
+                <span class="dataset-private label label-inverse">
+                    <i class="fa fa-lock"></i>
+                    {{ _('Private') }}
+                </span>
+              {% endif %}
+            {% endblock %}
+            {% block heading_title %}
+            {{super()}}
+            {% endblock %}
+          </h3>
+            <span class="dataset-subheading">{{package.organization.title}}</span>
+
+        {% endblock %}
 
 {% block resources_inner %}
   {% for resource in h.dict_list_reduce(package.resources, 'format') %}
