Move images into operandum directory

--- a/ckanext/dia_theme/templates/footer.html
+++ b/ckanext/dia_theme/templates/footer.html
@@ -113,7 +113,7 @@
 			<div class="site-footer__col-copyright">
 				<div class="row">
 					<div class="col-md-3">
-						<img src="/dia/images/eu_flag.jpg" alt="Flag of the European Union" width="83">
+						<img src="/operandum/images/eu_flag.jpg" alt="Flag of the European Union" width="83">
 					</div>
 					<div class="col-md-9">
 						<small>This project has received funding from the European Union’s Horizon 2020 research and innovation programme under grant agreement No 776848.<br/>All rights reserved.</small>
@@ -121,7 +121,7 @@
 				</div>
 			</div>
 			<div class="site-footer__col-logo">
-				<a href="https://www.govt.nz" aria-label="New Zealand Government">
+				<a href="https://www.operandum-project.eu/" aria-label="OPERANDUM Project">
 					<img src="{{ h.url_for_static_or_external(g.site_logo) }}" alt="{{ g.site_title }}" title="{{ g.site_title }}" width="179" />
 				</a>
 			</div>
