--- a/ckanext/dia_theme/templates/home/layout1.html
+++ b/ckanext/dia_theme/templates/home/layout1.html
@@ -3,7 +3,7 @@
 
 
 
-          <h1>Open data for nature-based solutions</br>to hydro-meteo risks</br><img class="home-pin" src="/dia/images/mapdrop.png" alt=""></h1>
+          <h1>Open data for nature-based solutions</br>to hydro-meteo risks</br><img class="home-pin" src="/operandum/images/mapdrop.png" alt=""></h1>
 
 
 
